# minimal-foundry-breaking-example

./: Cargo.lock.from_claudias_build  Cargo.toml  blarghle.txt
src/: main.rs
